Changed Some Files

--- a/colors.scss
+++ b/colors.scss
@@ -53,7 +53,7 @@ body {
 
 main {
     margin-left: 100px;
-    color: var(--sidebar);
+    color: rgb(214, 214, 214);
     font-weight: 700;
 
     h1 {
